modified:   backend/routes/auth.js 	modified:   backend/routes/books.js 	modified:   backend/swagger.yaml 	new file:   docs/App.js.html 	new file:   docs/components_BookItem.jsx.html 	new file:   docs/fonts/OpenSans-Bold-webfont.eot 	new file:   docs/fonts/OpenSans-Bold-webfont.svg 	new file:   docs/fonts/OpenSans-Bold-webfont.woff 	new file:   docs/fonts/OpenSans-BoldItalic-webfont.eot 	new file:   docs/fonts/OpenSans-BoldItalic-webfont.svg 	new file:   docs/fonts/OpenSans-BoldItalic-webfont.woff 	new file:   docs/fonts/OpenSans-Italic-webfont.eot 	new file:   docs/fonts/OpenSans-Italic-webfont.svg 	new file:   docs/fonts/OpenSans-Italic-webfont.woff 	new file:   docs/fonts/OpenSans-Light-webfont.eot 	new file:   docs/fonts/OpenSans-Light-webfont.svg 	new file:   docs/fonts/OpenSans-Light-webfont.woff 	new file:   docs/fonts/OpenSans-LightItalic-webfont.eot 	new file:   docs/fonts/OpenSans-LightItalic-webfont.svg 	new file:   docs/fonts/OpenSans-LightItalic-webfont.woff 	new file:   docs/fonts/OpenSans-Regular-webfont.eot 	new file:   docs/fonts/OpenSans-Regular-webfont.svg 	new file:   docs/fonts/OpenSans-Regular-webfont.woff 	new file:   docs/global.html 	new file:   docs/index.html 	new file:   docs/module-App.html 	new file:   docs/module-BookInfo.html 	new file:   docs/module-BooksPage.html 	new file:   docs/module-LoginPage.html 	new file:   docs/module-MainPage.html 	new file:   docs/module-ProfilePage.html 	new file:   docs/module-RegisterPage.html 	new file:   docs/pages_BookInfo.jsx.html 	new file:   docs/pages_BooksPage.jsx.html 	new file:   docs/pages_LoginPage.jsx.html 	new file:   docs/pages_MainPage.jsx.html 	new file:   docs/pages_ProfilePage.jsx.html 	new file:   docs/pages_RegisterPage.jsx.html 	new file:   docs/scripts/linenumber.js 	new file:   docs/scripts/prettify/Apache-License-2.0.txt 	new file:   docs/scripts/prettify/lang-css.js 	new file:   docs/scripts/prettify/prettify.js 	new file:   docs/styles/jsdoc-default.css 	new file:   docs/styl
