# backend/routes/books.js
@@ -1,10 +1,10 @@
 import express from 'express';
 import { getAllBooks, getBookById } from '../controllers/books.js';
+import { checkAuth } from '../utils/checkAuth.js';
 
 const router = express.Router();
 
-router.get('/', getAllBooks);
-router.get('/:id', getBookById);  
-//router.post('/search', searchBooks); 
+router.get('/',checkAuth, getAllBooks);
+router.get('/:id',checkAuth, getBookById);   
 
 export default router;
