# backend/swagger.yaml
@@ -24,7 +24,7 @@ paths:
                   type: string
       responses:
         '200':
-          description: Успішна реєстрация
+          description: Успішна реєстрація
         '400':
           description: Помилка вхідних даних
   /api/auth/login:
@@ -56,7 +56,9 @@ paths:
           description: Успішне отримання інформації про поточного користувача
         '401':
           description: Користувача не авторизовано
-  /api/users:
+      security:
+        - checkAuth: []
+  /api/auth/users:
     get:
       summary: Отримати список усіх користувачів
       responses:
@@ -64,7 +66,9 @@ paths:
           description: Успішне отримання списку користувачів
         '500':
           description: Помилка серверу при отриманні списку користувачів
-  /api/users/{id}:
+      security:
+        - checkAuth: []
+  /api/auth/users/{id}:
     put:
       summary: Оновити інформацію про користувача
       parameters:
@@ -95,6 +99,8 @@ paths:
           description: Користувача не авторизовано
         '404':
           description: Користувача не знайдено
+      security:
+        - checkAuth: []
   /api/book:
     get:
       summary: Отримати список книг
@@ -103,6 +109,8 @@ paths:
           description: Успішне отримання списка книг
         '500':
           description: Помилка сервера при отриманні списка книг
+      security:
+        - checkAuth: []
   /api/book/{id}:
     get:
       summary: Отримати інформацію про книгу за id
@@ -117,3 +125,11 @@ paths:
           description: Успішне отримання інформації о книзі
         '404':
           description: Книгу не знайдено
+      security:
+        - checkAuth: []
+
+components:
+  securitySchemes:
+    checkAuth:
+      type: http
+      scheme: basic
